--- a/src/index.scss
+++ b/src/index.scss
@@ -1,17 +1,19 @@
 @import-normalize;
-$red:red;
-body {
-  margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
-    sans-serif;
-  -webkit-font-smoothing: antialiased;
-  -moz-osx-font-smoothing: grayscale;
+@import "helper";
+*{margin:0;padding: 0;}
+*{box-sizing: border-box;}
+*::before{box-sizing: border-box;}
+*::after{box-sizing: border-box;}
+ul,ol{
+  list-style: none;
 }
-//*{
-//  color:$red!important;
-//}
-code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
-    monospace;
+a{
+  color: inherit;
+  text-decoration: none;
+}
+body{
+  font-family: $font-hei;
+  color:green !important;
+  font-size: 16px;
+  line-height: 1.2;
 }
