--- a/src/index.scss
+++ b/src/index.scss
@@ -4,6 +4,14 @@
 *{box-sizing: border-box;}
 *::before{box-sizing: border-box;}
 *::after{box-sizing: border-box;}
+.clearfix::after{
+  content: '';
+  display: block;
+  clear: both;
+}
+:focus{
+  outline: none;
+}
 ul,ol{
   list-style: none;
 }
@@ -13,9 +21,12 @@ a{
 }
 body{
   font-family: $font-hei;
-  color:green !important;
   font-size: 16px;
   line-height: 1.2;
+  background-color: #f5f5f5;
+}
+button{
+  font-family: inherit;
 }
 .icon{
   width: 1em;
