封装了useTag自定义Hook,将Label组件的结构样式写好

--- a/src/index.scss
+++ b/src/index.scss
@@ -33,3 +33,8 @@ button{
   height: 1em;
   display: inline-block;
 }
+.oneline{
+  white-space: nowrap;
+  overflow: hidden;
+  text-overflow: ellipsis;
+}
